Fix #120: MimeTypes native handling